[package]
name = "data-visualizer"
version = "1.0.1"
description = "Application for viewing and editing JSON, JSONL, and CSV files."
authors = ["askoq <https://github.com/askoq>"]
edition = "2021"

[lib]
name = "data_visualizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
